--- a/exinda/template/01.mjml
+++ b/exinda/template/01.mjml
@@ -1,6 +1,9 @@
 <mjml>
   <mj-head>
-    <mj-font name="Poppins" href="ttps://fonts.googleapis.com/family=Poppins" />
+    <mj-font
+      name="Poppins"
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap"
+    />
   </mj-head>
   <mj-body>
     <!-- Logo Section -->
@@ -10,14 +13,16 @@
           alt="exinda network orchestrator logo"
           href="https://www.gfi.com/products-and-solutions/network-security-solutions/exinda-network-orchestrator"
           src="https://raw.githubusercontent.com/nrjdalal/emaildemo/master/exinda/assets/exinda-logo.png"
-          width="240px"
+          width="200px"
         />
         <mj-text
           align="center"
-          font-family="'Poppins', sans-serif"
-          font-size="28px"
-          font-weight="700"
+          color="#171717"
+          font-family="Poppins, sans-serif"
+          font-size="24px"
+          font-weight="500"
           letter-spacing="1px"
+          line-height="1.4"
         >
           <a
             href="https://www.gfi.com/products-and-solutions/network-security-solutions/exinda-network-orchestrator"
@@ -30,5 +35,54 @@
     </mj-section>
 
     <!-- Opening Image -->
+    <mj-section padding="0">
+      <mj-column>
+        <mj-image
+          padding="0"
+          src="https://raw.githubusercontent.com/nrjdalal/emaildemo/master/exinda/assets/network.jpg"
+          alt=""
+        />
+      </mj-column>
+    </mj-section>
+
+    <!-- Why Exinda -->
+    <mj-section background-color="#FFFFFF">
+      <mj-column>
+        <mj-text
+          align="center"
+          color="#171717"
+          font-family="Poppins"
+          font-size="24px"
+          font-weight="600"
+          letter-spacing="1px"
+          line-height="1.4"
+        >
+          Why Exinda?
+        </mj-text>
+        <mj-text
+          align="center"
+          color="#171717"
+          font-family="Poppins"
+          font-size="20px"
+          font-weight="500"
+          letter-spacing="1px"
+          line-height="1.4"
+        >
+          Quality of service for your important network applications
+        </mj-text>
+        <mj-text
+          align="center"
+          color="#171717"
+          font-family="Poppins"
+          font-size="16px"
+          font-weight="400"
+          letter-spacing="1px"
+          line-height="1.4"
+        >
+          Manage network performance by focusing on the user experience of key
+          applications.
+        </mj-text>
+      </mj-column>
+    </mj-section>
   </mj-body>
 </mjml>
