--- a/exinda/template/01.mjml
+++ b/exinda/template/01.mjml
@@ -97,5 +97,28 @@
         />
       </mj-column>
     </mj-section>
+
+    <!-- Why Us 02 -->
+    <mj-section padding="0">
+      <mj-column>
+        <mj-image
+          padding="0"
+          src="https://raw.githubusercontent.com/nrjdalal/emaildemo/master/exinda/assets/01.png"
+          alt=""
+        />
+      </mj-column>
+    </mj-section>
+
+    <!-- Why Us 03 -->
+
+    <mj-section padding="0">
+      <mj-column>
+        <mj-image
+          padding="0"
+          src="https://raw.githubusercontent.com/nrjdalal/emaildemo/master/exinda/assets/01.png"
+          alt=""
+        />
+      </mj-column>
+    </mj-section>
   </mj-body>
 </mjml>
