--- a/exinda/template/01.mjml
+++ b/exinda/template/01.mjml
@@ -267,8 +267,20 @@
       </mj-column>
     </mj-section>
 
+    <!-- Clients -->
+    <mj-section background-color="#FFFFFF">
+      <mj-column>
+        <mj-image
+          alt="exinda network orchestrator logo"
+          href="https://pactec.co"
+          padding-bottom="24px"
+          src="https://i.ibb.co/1nydQhc/Pactec-GMail-White.png"
+          width="200px"
+        />
+      </mj-column>
+    </mj-section>
+
     <!-- Footer -->
-    <!-- Logo Section -->
     <mj-section background-color="#171717">
       <mj-column>
         <mj-image
