--- a/exinda/template/01.mjml
+++ b/exinda/template/01.mjml
@@ -250,7 +250,7 @@
           background-color="#F25F4A"
           font-family="Poppins"
           font-weight="500"
-          href="https://www.gfi.com/products-and-solutions/network-security-solutions/exinda-network-orchestrator"
+          href="https://www.gfi.com/products-and-solutions/network-security-solutions/exinda-network-orchestrator/specifications#features"
           letter-spacing="1px"
         >
           FIND OUT MORE
